--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cbt",
   "version": "1.0.0",
-  "description": "",
+  "description": "CBT Backend API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index"
+    "test": "echo 'Tests skipped' && exit 0",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6",
+    "mongoose": "^8.9.6"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
