--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,5 +1,3 @@
-### delpoy-backend.yml
-
 name: Deploy Node.js Backend
 
 on:
@@ -14,12 +12,15 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Install Dependencies
         run: npm install
+
       - name: Run Tests
         run: npm test
 
@@ -29,24 +30,29 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Install .NET 6 (For OWASP Dependency Check)
+
+      - name: Install Java (Required for OWASP Dependency Check)
+        run: sudo apt-get install -y openjdk-17-jdk
+
+      - name: Install OWASP Dependency Check
         run: |
-          sudo apt-get update
-          wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-          sudo dpkg -i packages-microsoft-prod.deb
-          sudo apt-get update
-          sudo apt-get install -y dotnet-sdk-6.0
+          mkdir -p dependency-check
+          curl -L https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.2/dependency-check-10.0.2-release.zip -o dependency-check.zip
+          unzip dependency-check.zip -d dependency-check
+          rm dependency-check.zip
+
+      - name: Clear Old Dependency Check Data (If Exists)
+        run: rm -rf dependency-check/data
+
       - name: Run OWASP Dependency Check
         run: |
-          curl -LO https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.1/dependency-check-8.3.1-release.zip
-          unzip dependency-check-8.3.1-release.zip
-          mkdir -p security-reports
-          ./dependency-check/bin/dependency-check.sh --project "CBT-Backend" --scan . --format "ALL" --out security-reports/
-      - name: Upload Security Report
+          dependency-check/bin/dependency-check.sh --project "NodeJS Backend" --scan . --format "HTML" --out reports
+
+      - name: Upload Dependency Check Report
         uses: actions/upload-artifact@v4
         with:
-          name: OWASP-Dependency-Check-Report
-          path: security-reports/
+          name: security-report
+          path: reports
 
   deploy:
     needs: security-scan
@@ -54,6 +60,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Deploy to AWS EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
