--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -39,8 +39,8 @@ jobs:
           mkdir -p dependency-check
           curl -L https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.2/dependency-check-10.0.2-release.zip -o dependency-check.zip
           unzip dependency-check.zip -d dependency-check
-          mv dependency-check/dependency-check-* dependency-check/dependency-check
-          rm dependency-check.zip
+          mv dependency-check/dependency-check/* dependency-check/
+
 
       - name: Clear Old Dependency Check Data (If Exists)
         run: rm -rf dependency-check/data
