--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -37,6 +37,17 @@ jobs:
       - name: Install .NET 6.0 SDK (Required for Dependency-Check)
         run: |
           sudo apt-get update
+          sudo apt-get install -y apt-transport-https ca-certificates software-properties-common
+          wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          sudo apt-get update
+          sudo apt-get install -y dotnet-sdk-6.0
+          dotnet --version
+
+
+      - name: Install .NET 6.0 SDK (Required for Dependency-Check)
+        run: |
+          sudo apt-get update
           sudo apt-get install -y dotnet-sdk-6.0
           dotnet --version
 
